# OmicABELnoMM

./: .gitignore  README.mac.md
examples/: CreateData.R  create_XL.R  create_XR.R  create_Y.R  settings.R  testing.R
src/: AIOwrapper.h  Definitions.h  Makefile.am  pthread_barrier.h
